--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,10 @@ http://phpmanufaktur.de
 (c) 2011-2012 - phpManufaktur by Ralf Hertsch
 
 
+Release 0.35 - 2012-06-14
+
+* removed WebsiteBaker version check
+
 Release 0.34 - 2012-06-07
 
 * moved repository from SVN to GitHub
