--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,11 @@ Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
 http://phpmanufaktur.de  
 (c) 2011-2012 - phpManufaktur by Ralf Hertsch  
   
+Release 0.39 - IN PROGRESS
+
+* fixed: if missing an KIT ID in the kitForm protocol it will now prompt the 
+  missing ID but still continue with the protocol   
+  
 Release 0.38 - 2012-08-04
 
 * the prefix "custom." enables custom templates for class.backend.php 
