--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,20 +4,26 @@ Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
 http://phpmanufaktur.de
 (c) 2011-2012 - phpManufaktur by Ralf Hertsch
 
-Release 0.39 - NOT PUBLISHED
+Release 0.39 - 2012-11-16
 
 * fixed: the kit_form droplet does not check if the TABLE_PREFIX has changed
-* added: kit_form droplet can now redirect the user after a successful login 
+* added: kit_form droplet can now redirect the user after a successful login
   (http://yals.de/SM25dY)
 * fixed: if missing an KIT ID in the kitForm protocol it will now prompt the
   missing ID but still continue with the protocol
 * fixed: check if key exists before access value (class.backend.php)
 * added: wait the specified seconds before the form submission is accepted
+* fixed: duplicate entries and processing of emails due calls of DropletsExtension
+* changed usage of the KIT contact title: the form gets now the value defined in
+  the KIT list settings. Please use now:
+  {if $contact.kit_title == 'Herr'}r{/if} {$contact.kit_title}
+  instead of
+  {if $contact.kit_title == 'titleMister'}r Herr{else} Frau{/if}
 
 Release 0.38 - 2012-08-04
 
 * the prefix "custom." enables custom templates for class.backend.php
-* fixed: to strong field validation in class.frontend.php, please read
+* fixed: too strong field validation in class.frontend.php, please read
   <http://yals.de/QoSbQ5> for more informations
 * fixed a problem reading markdown formatted texts in feedback.htt
 
