--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,11 +4,12 @@ Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
 http://phpmanufaktur.de
 (c) 2011-2012 - phpManufaktur by Ralf Hertsch
 
-Release 0.40 - NOT PUBLISHED
+Release 0.40 - 2012-12-08
 
 * fixed: free fields and notes are mapped in the wrong way by kitForm
 * added: added field names in the response array of the forms
 * fixed: standard file uploads are added twice to the protocol
+* added: support for special upload links from KeepInTouch 0.64
 
 Release 0.39 - 2012-11-16
 
