--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,18 @@ Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
 http://phpmanufaktur.de
 (c) 2011-2012 - phpManufaktur by Ralf Hertsch
 
+Release 0.41 - NOT PUBLISHED
+
+* added: admin functions to remove duplicate submitted forms
+* added: delete form data record in protocol detail view
+* added: use protocol_limit in the config.json to change the item limit in the
+  protocol list, see also <http://yals.de/OQRv0Y> for more informations
+* added: admin function to delete unpublished feedbacks (SPAM) and optional
+  also the associated KIT ID's
+* fixed: the internal precheck for KIT may fail because it does not use the
+  custom table prefix if defined
+* added: admin function to export submitted form data as CSV file
+
 Release 0.40 - 2012-12-08
 
 * fixed: free fields and notes are mapped in the wrong way by kitForm
