--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
 http://phpmanufaktur.de
 (c) 2011-2013 - phpManufaktur by Ralf Hertsch
 
+Release 0.42 - NOT PUBLISHED
+
+* fixed: the CSV export does not support the combined field kit_zip_city
+
 Release 0.41 - 2013-01-03
 
 * added: admin function to remove duplicate submitted forms
